--- a/app/src/main/res/layout/rcy_cloth_device_item.xml
+++ b/app/src/main/res/layout/rcy_cloth_device_item.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:id="@+id/ll_terminal"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_120"
+        android:layout_height="@dimen/dp_160"
         android:layout_marginLeft="@dimen/dp_10"
         android:layout_marginRight="@dimen/dp_10"
         android:background="@drawable/device_selector"
@@ -28,11 +28,67 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="@dimen/dp_5"
             android:layout_marginTop="@dimen/dp_5"
+            android:layout_marginBottom="@dimen/dp_5"
             android:text="验布机1号"
             android:textColor="@color/color_242525"
             android:textSize="@dimen/sp_13" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_marginTop="@dimen/dp_3"
+            android:background="@color/color_e4e4e4"></View>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_10">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_40"
+                android:text="@string/mac_address"
+                android:textColor="@color/color_242525"
+                android:textSize="@dimen/sp_14" />
+
+            <TextView
+                android:id="@+id/tv_mac"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_7"
+                android:textColor="@color/color_242525"
+                android:textSize="@dimen/sp_14" />
+
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_10">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_40"
+                android:text="@string/device_status"
+                android:textColor="@color/color_242525"
+                android:textSize="@dimen/sp_14" />
+
+            <TextView
+                android:id="@+id/tv_device_status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_7"
+                android:textColor="@color/color_242525"
+                android:textSize="@dimen/sp_14" />
+
+
+        </LinearLayout>
+
 
     </LinearLayout>
 
