--- a/app/src/main/res/drawable/item_border_shape.xml
+++ b/app/src/main/res/drawable/item_border_shape.xml
@@ -1,10 +1,10 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:width="0.5dp"
+        android:width="1dp"
         android:gravity="right">
         <shape>
             <solid
-                android:color="@color/color_a1a1a1"/>
+                android:color="@color/color_e4e4e4"/>
         </shape>
     </item>
 </layer-list>
