--- a/app/src/main/res/layout/activity_my_qr.xml
+++ b/app/src/main/res/layout/activity_my_qr.xml
@@ -5,31 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".StartAppActivity">
+    tools:context=".user.view.activity.MyQRActivity">
+
+    <include layout="@layout/base_title"></include>
 
     <RelativeLayout
-        android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <ImageView
+            android:id="@+id/iv_code"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:src="@mipmap/logo1" />
-
-
-        <TextView
-            android:id="@+id/tv_version"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="@dimen/dp_48"
-            android:text="@string/smart_qc_manage_app"
-            android:textColor="@color/color_242525" />
-
+            android:layout_centerInParent="true" />
 
     </RelativeLayout>
+
 
 </LinearLayout>
