--- a/app/src/main/res/layout/activity_user_center.xml
+++ b/app/src/main/res/layout/activity_user_center.xml
@@ -188,6 +188,7 @@
                 android:background="@color/color_e4e4e4"></View>
 
             <LinearLayout
+                android:visibility="gone"
                 android:id="@+id/ll_son_manage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -244,7 +245,8 @@
                 android:id="@+id/ll_device"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:visibility="gone">
 
 
                 <View
@@ -255,6 +257,7 @@
 
 
                 <LinearLayout
+                    android:id="@+id/ll_qr_code"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/dp_45"
                     android:background="@color/white"
@@ -264,7 +267,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="@dimen/dp_10"
-                        android:text="@string/server_count"
+                        android:text="@string/qr_code_card"
                         android:textColor="@color/result_view"
                         android:textSize="@dimen/sp_15" />
 
@@ -272,58 +275,18 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
 
-                        <TextView
-                            android:id="@+id/tv_server_count"
+                        <ImageView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
                             android:layout_centerVertical="true"
-                            android:layout_marginRight="@dimen/dp_30"
-                            android:textColor="@color/color_a1a1a1"
-                            android:textSize="@dimen/sp_15" />
-
+                            android:layout_marginRight="@dimen/dp_10"
+                            android:src="@mipmap/into" />
 
                     </RelativeLayout>
 
                 </LinearLayout>
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="0.5dp"
-                    android:background="@color/color_e4e4e4"></View>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/dp_45"
-                    android:background="@color/white"
-                    android:gravity="center_vertical">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/dp_10"
-                        android:text="@string/terminal_count"
-                        android:textColor="@color/result_view"
-                        android:textSize="@dimen/sp_15" />
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-
-                        <TextView
-                            android:id="@+id/tv_terminal_count"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentRight="true"
-                            android:layout_centerVertical="true"
-                            android:layout_marginRight="@dimen/dp_30"
-                            android:textColor="@color/color_a1a1a1"
-                            android:textSize="@dimen/sp_15" />
-
-
-                    </RelativeLayout>
-
-                </LinearLayout>
 
                 <View
                     android:layout_width="match_parent"
@@ -336,14 +299,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
                 android:layout_marginTop="@dimen/dp_20"
-                android:background="@color/color_e4e4e4"></View>
+                android:background="@color/color_e4e4e4"
+                android:visibility="gone"></View>
 
             <LinearLayout
                 android:id="@+id/ll_about"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp_45"
                 android:background="@color/white"
-                android:gravity="center_vertical">
+                android:gravity="center_vertical"
+                android:visibility="gone">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -359,13 +324,15 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
-                android:background="@color/color_e4e4e4"></View>
+                android:background="@color/color_e4e4e4"
+                android:visibility="gone"></View>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp_45"
                 android:background="@color/white"
-                android:gravity="center_vertical">
+                android:gravity="center_vertical"
+                android:visibility="gone">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -430,6 +397,7 @@
 
 
             </RelativeLayout>
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
