--- a/app/src/main/res/layout/rcy_server_list_item_view.xml
+++ b/app/src/main/res/layout/rcy_server_list_item_view.xml
@@ -25,7 +25,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="@dimen/dp_3"
                 android:layout_marginTop="@dimen/dp_5"
-                android:src="@mipmap/server" />
+                 />
 
             <TextView
                 android:id="@+id/tv_server_name"
@@ -47,7 +47,6 @@
             android:orientation="vertical">
 
             <android.support.v7.widget.RecyclerView
-
                 android:id="@+id/rcy_terminal_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
@@ -60,7 +59,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:background="@color/color_a1a1a1"></View>
+        android:layout_height="1dp"
+        android:background="@color/color_e4e4e4"></View>
 
 </LinearLayout>
