--- a/app/src/main/res/layout/rcy_terminal_item_view.xml
+++ b/app/src/main/res/layout/rcy_terminal_item_view.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/dp_10"
+    android:layout_marginTop="@dimen/dp_20"
+    android:layout_marginLeft="@dimen/dp_10"
+    android:layout_marginBottom="@dimen/dp_20"
     android:background="@drawable/device_selector"
     android:orientation="vertical">
 
